--- a/index.html
+++ b/index.html
@@ -210,8 +210,8 @@
                     </li>
                     <li><strong>Season Length:</strong>
                         <ul>
-                            <li>4 Tuesdays (Feb 10, 17, 24 & Mar 3) — Regular Season</li>
-                            <li>2 Tuesdays (Mar 10 & 17) — Playoffs</li>
+                            <li>5 Tuesdays (Feb 10, 17, 24, Mar 3 & 10) — Regular Season</li>
+                            <li>1 Tuesday (Mar 17) — Finals</li>
                         </ul>
                     </li>
                 </ul>
@@ -239,18 +239,18 @@
             </div>
 
             <div class="guideline-card">
-                <h3><span class="g-num">4</span> Playoffs</h3>
+                <h3><span class="g-num">4</span> Finals</h3>
                 <ul>
-                    <li>Playoffs are seeded based on regular-season rankings</li>
+                    <li>Finals are seeded based on regular-season rankings</li>
                 </ul>
                 <div class="bracket">
-                    <div class="bracket-match">🏅 1st & 3rd<br>vs<br>6th & 8th<span>Semifinal 1</span></div>
-                    <div class="bracket-match">🏅 2nd & 4th<br>vs<br>5th & 7th<span>Semifinal 2</span></div>
+                    <div class="bracket-match">🏆 1st, 2nd, 3rd & 4th<span>Top 4 Match</span></div>
+                    <div class="bracket-match">🎾 5th, 6th, 7th & 8th<span>Bottom 4 Match</span></div>
                 </div>
                 <ul>
-                    <li>Winners advance to the <strong>Final</strong></li>
-                    <li>Losers play a <strong>3rd–4th place match</strong></li>
-                    <li>Playoff matches: <strong>best of 3 sets</strong></li>
+                    <li><strong>Top 4 Match:</strong> The best 4 players compete together</li>
+                    <li><strong>Bottom 4 Match:</strong> The other 4 players compete together</li>
+                    <li>Finals format: <strong>best of 3 sets</strong> with rotating partners</li>
                 </ul>
             </div>
 
@@ -459,7 +459,11 @@
                 { id: 5, date: '2026-02-24', time: '17:30', team1: 'Will, Robb, Patrick, Dave', team2: '', location: 'Court 1' },
                 { id: 6, date: '2026-02-24', time: '19:00', team1: 'Felipe, Josh, Missy, George', team2: '', location: 'Court 1' },
                 { id: 7, date: '2026-03-03', time: '17:30', team1: 'Will, Missy, Josh, Dave', team2: '', location: 'Court 1' },
-                { id: 8, date: '2026-03-03', time: '19:00', team1: 'Felipe, Patrick, Robb, George', team2: '', location: 'Court 1' }
+                { id: 8, date: '2026-03-03', time: '19:00', team1: 'Felipe, Patrick, Robb, George', team2: '', location: 'Court 1' },
+                { id: 9, date: '2026-03-10', time: '17:30', team1: 'Felipe, Dave, Patrick, Josh', team2: '', location: 'Court 1' },
+                { id: 10, date: '2026-03-10', time: '19:00', team1: 'Will, George, Robb, Missy', team2: '', location: 'Court 1' },
+                { id: 11, date: '2026-03-17', time: '17:30', team1: '🏆 Seed 1, Seed 2, Seed 3, Seed 4', team2: '', location: 'Court 1' },
+                { id: 12, date: '2026-03-17', time: '17:30', team1: '🎾 Seed 5, Seed 6, Seed 7, Seed 8', team2: '', location: 'Court 2' }
             ],
             photos: {
                 'Winter 2026': []
