--- a/index.html
+++ b/index.html
@@ -432,14 +432,14 @@
             seasons: {
                 'Winter 2026': {
                     players: [
-                        { id: 1, name: 'Will Wait', points: 16, gamesPlayed: 26, matchesWon: 2, matchesLost: 1 },
-                        { id: 2, name: 'Patrick Grant', points: 13, gamesPlayed: 27, matchesWon: 1, matchesLost: 2 },
-                        { id: 3, name: 'Robb Warren', points: 8, gamesPlayed: 26, matchesWon: 0, matchesLost: 3 },
-                        { id: 4, name: 'Josh Pelletter', points: 15, gamesPlayed: 26, matchesWon: 2, matchesLost: 1 },
-                        { id: 5, name: 'Felipe Quaassdorff', points: 13, gamesPlayed: 26, matchesWon: 2, matchesLost: 1 },
-                        { id: 6, name: 'Missy Dunn', points: 9, gamesPlayed: 27, matchesWon: 1, matchesLost: 2 },
-                        { id: 7, name: 'Dave Vitale', points: 19, gamesPlayed: 27, matchesWon: 3, matchesLost: 0 },
-                        { id: 8, name: 'George Frese', points: 13, gamesPlayed: 27, matchesWon: 1, matchesLost: 2 }
+                        { id: 1, name: 'Will Wait', points: 34, gamesPlayed: 50, matchesWon: 5, matchesLost: 1 },
+                        { id: 2, name: 'Patrick Grant', points: 24, gamesPlayed: 51, matchesWon: 2, matchesLost: 4 },
+                        { id: 3, name: 'Robb Warren', points: 20, gamesPlayed: 53, matchesWon: 1, matchesLost: 5 },
+                        { id: 4, name: 'Josh Pelletter', points: 28, gamesPlayed: 53, matchesWon: 3, matchesLost: 3 },
+                        { id: 5, name: 'Felipe Quaassdorff', points: 22, gamesPlayed: 50, matchesWon: 3, matchesLost: 3 },
+                        { id: 6, name: 'Missy Dunn', points: 19, gamesPlayed: 51, matchesWon: 2, matchesLost: 4 },
+                        { id: 7, name: 'Dave Vitale', points: 37, gamesPlayed: 54, matchesWon: 6, matchesLost: 0 },
+                        { id: 8, name: 'George Frese', points: 24, gamesPlayed: 54, matchesWon: 2, matchesLost: 4 }
                     ],
                     matches: [
                         { id: 1, date: '2026-02-10', team1: ['Patrick Grant', 'Missy Dunn'], team2: ['Dave Vitale', 'George Frese'], score1: 1, score2: 6 },
@@ -447,7 +447,13 @@
                         { id: 3, date: '2026-02-10', team1: ['Patrick Grant', 'George Frese'], team2: ['Missy Dunn', 'Dave Vitale'], score1: 6, score2: 7 },
                         { id: 4, date: '2026-02-10', team1: ['Will Wait', 'Felipe Quaassdorff'], team2: ['Robb Warren', 'Josh Pelletter'], score1: 6, score2: 3 },
                         { id: 5, date: '2026-02-10', team1: ['Will Wait', 'Robb Warren'], team2: ['Felipe Quaassdorff', 'Josh Pelletter'], score1: 4, score2: 6 },
-                        { id: 6, date: '2026-02-10', team1: ['Will Wait', 'Josh Pelletter'], team2: ['Felipe Quaassdorff', 'Robb Warren'], score1: 6, score2: 1 }
+                        { id: 6, date: '2026-02-10', team1: ['Will Wait', 'Josh Pelletter'], team2: ['Felipe Quaassdorff', 'Robb Warren'], score1: 6, score2: 1 },
+                        { id: 7, date: '2026-02-17', team1: ['Robb Warren', 'Dave Vitale'], team2: ['Josh Pelletter', 'George Frese'], score1: 6, score2: 3 },
+                        { id: 8, date: '2026-02-17', team1: ['Robb Warren', 'Josh Pelletter'], team2: ['Dave Vitale', 'George Frese'], score1: 4, score2: 6 },
+                        { id: 9, date: '2026-02-17', team1: ['Robb Warren', 'George Frese'], team2: ['Dave Vitale', 'Josh Pelletter'], score1: 2, score2: 6 },
+                        { id: 10, date: '2026-02-17', team1: ['Will Wait', 'Patrick Grant'], team2: ['Felipe Quaassdorff', 'Missy Dunn'], score1: 6, score2: 1 },
+                        { id: 11, date: '2026-02-17', team1: ['Will Wait', 'Felipe Quaassdorff'], team2: ['Patrick Grant', 'Missy Dunn'], score1: 6, score2: 3 },
+                        { id: 12, date: '2026-02-17', team1: ['Will Wait', 'Missy Dunn'], team2: ['Patrick Grant', 'Felipe Quaassdorff'], score1: 6, score2: 2 }
                     ]
                 }
             },
